k8s/core-app/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: full-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
