k8s/core-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: core-app
  labels:
    app: core-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: core-app

  template:
    metadata:
      labels:
        app: core-app

    spec:
      containers:
      - name: core-app
        image: deleany/core-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 1111
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi
        volumeMounts:
          - name: core-app-vol
            mountPath: "/config"
            readOnly: true

          - name: filebeat-config
            mountPath: /etc/filebeat
            readOnly: true

          - name: logs-dir
            mountPath: /tmp/logs
            readOnly: true

      - name: filebeat-sidecar
        image: deleany/file:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi

        args: [ "filebeat -c /etc/filebeat/filebeat.yml" ]
        command: [ "sh", "-c" ]

        volumeMounts:
          - name: core-app-vol
            mountPath: "/config"
            readOnly: true

          - name: filebeat-config
            mountPath: /etc/filebeat
            readOnly: true

          - name: logs-dir
            mountPath: /tmp/logs
            readOnly: true

      volumes:
        - name: core-app-vol
          configMap:
            name: core-app-config
            items:
            - key: "config.ini"
              path: "config.ini"
            - key: "game-special-key"
              path: "game-special-key"
        - name: filebeat-config
          configMap:
            name: filebeat-config
            items:
            - key: "filebeat.yml"
              path: "filebeat.yml"
        - name: logs-dir
          emptyDir: {}
