k8s/core-app/externat-elk.svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: external-elk-svc
spec:
  selector:
    istio: egressgateway
  ports:
  - name: tcp-2021
    port: 2021
    targetPort: 2021
