k8s/core-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-app-svc
spec:
  selector:
    app: core-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 1111
