k8s/core-app/egress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
 name: istio-egressgateway
 namespace: istio-system
spec:
 selector:
   istio: egressgateway
   app: istio-egressgateway
 servers:
 - port:
     number: 443
     name: TCP
     protocol: TCP
   hosts:
   - "elastic.rezz.io"
