k8s/core-app/core-app-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: core-app-vs
  namespace: default
spec:
  hosts:
  - "app.rezz.io"
  gateways:
  - istio-ingress-gateway
  - mash
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: core-app-svc
        port:
          number: 8080 # can be omitted if it's the only port for reviews
      weight: 100
