k8s/core-app/dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: core-app-dst-rule
spec:
  host: core-app-svc
  subsets:
  - name: core-app-subset
    labels:
      app: core-app
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
