k8s/core-app/elk-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-host-elk-se
spec:
  exportTo:
    - "*"
  location: MESH_EXTERNAL
  hosts:
  - "elastic.rezz.io"
  ports:
  - name: tls-elk
    number: 9200
    protocol: TLS
  resolution: DNS
