k8s/core-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: core-app
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app.rezz.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: core-app-svc
            port:
              number: 8081
