k8s/core-app/kafka-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-host-elk-se
spec:
  exportTo:
    - "*"
  location: MESH_EXTERNAL
  hosts:
  - "kafka1.rezz.io"
  ports:
  - name: http-elk
    number: 80
    protocol: HTTP
  resolution: DNS
